# Ray-Tracing

./: .gitignore  CMakeLists.txt  components.cpp  components.h  main.cpp  raytracer.cpp  raytracer.h  scene.h
brdf/: BRDF.h  CookTorranceBRDF.cpp  CookTorranceBRDF.h
engine/: engine.cpp  engine.h
scene/: components.cpp  components.h  scene.cpp  scene.h
